--- a/ansible/roles/influx_db/tasks/main.yml
+++ b/ansible/roles/influx_db/tasks/main.yml
@@ -16,6 +16,7 @@
       name: influxdb
       state: started
       enabled: true
+    become: yes
 
   - name: Query existing DB users
     shell: "curl -XPOST http://localhost:8086/query --data-urlencode 'q=SHOW USERS'"
