--- a/ansible/roles/reboot/tasks/main.yml
+++ b/ansible/roles/reboot/tasks/main.yml
@@ -4,6 +4,7 @@
     async: 1
     poll: 0
     ignore_errors: true
+    become: yes
 
   - name: Wait for host to come back online
     local_action: wait_for
