updated ansible, removed api and replaced it with the rpIoT api in readme

--- a/ansible/piMetrics_setup.yml
+++ b/ansible/piMetrics_setup.yml
@@ -5,10 +5,8 @@
   remote_user: "{{ ssh_user }}"
 
   roles:
-    ## Only use update on initial build, will upgrade application if run multiple times.
-    # - update
-    # - common
-    # - reboot
-    # - influx_db
-    # - grafana
-    - api
+    - common
+    - reboot
+    - influx_db
+    - grafana
+    - telegraf
