removed top level ansible dir, mv telegraf to seperate repo

--- a/piMetrics_setup.yml
+++ b/piMetrics_setup.yml
@@ -2,11 +2,10 @@
 - hosts:
     piGrafana
   connection: ssh
-  remote_user: "{{ ssh_user }}"
+  remote_user: pi
 
   roles:
     - common
     - reboot
     - influx_db
     - grafana
-    - telegraf
